--- a/css/style.css
+++ b/css/style.css
@@ -3130,16 +3130,34 @@ button:hover{
     margin: 0 1% 5px;
     min-height: 70px;
     vertical-align: top;
-    width: 31%;
+    min-width: 15%;
+    max-width: 23%;
     text-align: center;
+    padding: 5px;
 }
 
 .file image,
 .file .image{
-    height: 50px;
+    height: 50px !important;
     max-width: 100%;
     vertical-align: middle;
     text-align: center;
+}
+
+.file .close{
+    display: inline-block;
+    opacity: 0;
+    float: right;
+    margin-top: -10px;
+    margin-right: -10px;
+    margin-left: -30px;
+    cursor: pointer;
+
+        -o-transition: all 3s ease-in-out;
+        -ms-transition: all 3s ease-in-out;
+        -moz-transition: all 3s ease-in-out;
+        -webkit-transition: all 3s ease-in-out;
+    transition: all 3s ease-in-out;
 }
 
 .file div{
@@ -3167,6 +3185,15 @@ button:hover{
         -moz-transition: all 6s ease-in-out;
         -webkit-transition: all 6s ease-in-out;
     transition: all 6s ease-in-out;
+}
+
+.file:hover .close{
+    opacity: 1;
+        -o-transition: all 1s ease-in-out;
+        -ms-transition: all 1s ease-in-out;
+        -moz-transition: all 1s ease-in-out;
+        -webkit-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
 }
 
 .file:hover div span{
