--- a/css/jquery-ui-1.9.0.custom.css
+++ b/css/jquery-ui-1.9.0.custom.css
@@ -83,32 +83,237 @@ input.ui-button { padding: .4em 1em; }
 
 /* workarounds */
 button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra padding in Firefox */
-.ui-datepicker { width: 17em; padding: .2em .2em 0; display: none; }
-.ui-datepicker .ui-datepicker-header { position:relative; padding:.2em 0; }
-.ui-datepicker .ui-datepicker-prev, .ui-datepicker .ui-datepicker-next { position:absolute; top: 2px; width: 1.8em; height: 1.8em; }
-.ui-datepicker .ui-datepicker-prev-hover, .ui-datepicker .ui-datepicker-next-hover { top: 1px; }
+.ui-datepicker { 
+	width: 300px;
+	padding:0; 
+	display: none;
+	
+	border-top: none !important;
+	border-bottom: none !important;
+	border-left: none !important;
+
+	border-radius: none !important;
+	background: #ffffff !important;
+	border-right: 1px solid #dedede !important;
+
+	border-radius: none !important;
+
+		-o-border-radius-topright: 0 !important;
+		-moz-border-radius-topright: 0 !important;
+		-ms-border-radius-topright: 0 !important;
+		-webkit-border-top-right-radius: 0 !important;
+		-khtml-border-top-right-radius: 0 !important;
+	border-top-right-radius: 0 !important;
+
+		-o-border-radius-topleft: 0 !important;
+		-moz-border-radius-topleft: 0 !important;
+		-ms-border-radius-topleft: 0 !important;
+		-webkit-border-top-left-radius: 0 !important;
+		-khtml-border-top-left-radius: 0 !important;
+	border-top-left-radius: 0 !important;
+		
+		-o-border-radius-bottomright: 0 !important;
+		-moz-border-radius-bottomright: 0 !important;
+		-ms-border-radius-bottomright: 0 !important;
+		-webkit-border-bottom-right-radius: 0 !important;
+		-khtml-border-bottom-right-radius: 0 !important;
+	border-bottom-right-radius: 0 !important;
+
+		-o-border-radius-bottomleft: 0 !important;
+		-moz-border-radius-bottomleft: 0 !important;
+		-ms-border-radius-bottomleft: 0 !important;
+		-webkit-border-bottom-left-radius: 0 !important;
+		-khtml-border-bottom-left-radius: 0 !important;
+	border-bottom-left-radius: 0 !important;
+}
+.ui-datepicker .ui-datepicker-header { 
+	position:relative; 
+	padding:0;
+	margin: 0; 
+	background-color: #A5A3A4; 
+	
+	border: none !important;
+	border-radius: none !important;
+
+		-o-border-radius-topright: 0 !important;
+		-moz-border-radius-topright: 0 !important;
+		-ms-border-radius-topright: 0 !important;
+		-webkit-border-top-right-radius: 0 !important;
+		-khtml-border-top-right-radius: 0 !important;
+	border-top-right-radius: 0 !important;
+
+		-o-border-radius-topleft: 0 !important;
+		-moz-border-radius-topleft: 0 !important;
+		-ms-border-radius-topleft: 0 !important;
+		-webkit-border-top-left-radius: 0 !important;
+		-khtml-border-top-left-radius: 0 !important;
+	border-top-left-radius: 0 !important;
+		
+		-o-border-radius-bottomright: 0 !important;
+		-moz-border-radius-bottomright: 0 !important;
+		-ms-border-radius-bottomright: 0 !important;
+		-webkit-border-bottom-right-radius: 0 !important;
+		-khtml-border-bottom-right-radius: 0 !important;
+	border-bottom-right-radius: 0 !important;
+
+		-o-border-radius-bottomleft: 0 !important;
+		-moz-border-radius-bottomleft: 0 !important;
+		-ms-border-radius-bottomleft: 0 !important;
+		-webkit-border-bottom-left-radius: 0 !important;
+		-khtml-border-bottom-left-radius: 0 !important;
+	border-bottom-left-radius: 0 !important;
+}
+.ui-datepicker .ui-datepicker-prev, .ui-datepicker .ui-datepicker-next { 
+	position:absolute; 
+	top: 2px; 
+	width: 1.8em; 
+	height: 1.8em;
+
+	border: none !important;
+	border-radius: none !important;
+}
+.ui-datepicker .ui-datepicker-prev-hover, 
+.ui-datepicker .ui-datepicker-next-hover { 
+	top: 1px;
+	margin: 0 !important;
+	padding: 0 !important;
+
+	border: none !important;
+	border-radius: none !important;
+
+		-o-border-radius-topright: 0 !important;
+		-moz-border-radius-topright: 0 !important;
+		-ms-border-radius-topright: 0 !important;
+		-webkit-border-top-right-radius: 0 !important;
+		-khtml-border-top-right-radius: 0 !important;
+	border-top-right-radius: 0 !important;
+
+		-o-border-radius-topleft: 0 !important;
+		-moz-border-radius-topleft: 0 !important;
+		-ms-border-radius-topleft: 0 !important;
+		-webkit-border-top-left-radius: 0 !important;
+		-khtml-border-top-left-radius: 0 !important;
+	border-top-left-radius: 0 !important;
+		
+		-o-border-radius-bottomright: 0 !important;
+		-moz-border-radius-bottomright: 0 !important;
+		-ms-border-radius-bottomright: 0 !important;
+		-webkit-border-bottom-right-radius: 0 !important;
+		-khtml-border-bottom-right-radius: 0 !important;
+	border-bottom-right-radius: 0 !important;
+
+		-o-border-radius-bottomleft: 0 !important;
+		-moz-border-radius-bottomleft: 0 !important;
+		-ms-border-radius-bottomleft: 0 !important;
+		-webkit-border-bottom-left-radius: 0 !important;
+		-khtml-border-bottom-left-radius: 0 !important;
+	border-bottom-left-radius: 0 !important; 
+}
 .ui-datepicker .ui-datepicker-prev { left:2px; }
 .ui-datepicker .ui-datepicker-next { right:2px; }
 .ui-datepicker .ui-datepicker-prev-hover { left:1px; }
 .ui-datepicker .ui-datepicker-next-hover { right:1px; }
-.ui-datepicker .ui-datepicker-prev span, .ui-datepicker .ui-datepicker-next span { display: block; position: absolute; left: 50%; margin-left: -8px; top: 50%; margin-top: -8px;  }
-.ui-datepicker .ui-datepicker-title { margin: 0 2.3em; line-height: 1.8em; text-align: center; }
+.ui-datepicker .ui-datepicker-prev span, 
+.ui-datepicker .ui-datepicker-next span { 
+	display: block; 
+	position: absolute; 
+	left: 50%; 
+	margin-left: -8px; 
+	top: 50%; 
+	margin-top: -8px;
+
+	border: none !important;
+	border-radius: none !important;
+
+		-o-border-radius-topright: 0 !important;
+		-moz-border-radius-topright: 0 !important;
+		-ms-border-radius-topright: 0 !important;
+		-webkit-border-top-right-radius: 0 !important;
+		-khtml-border-top-right-radius: 0 !important;
+	border-top-right-radius: 0 !important;
+
+		-o-border-radius-topleft: 0 !important;
+		-moz-border-radius-topleft: 0 !important;
+		-ms-border-radius-topleft: 0 !important;
+		-webkit-border-top-left-radius: 0 !important;
+		-khtml-border-top-left-radius: 0 !important;
+	border-top-left-radius: 0 !important;
+		
+		-o-border-radius-bottomright: 0 !important;
+		-moz-border-radius-bottomright: 0 !important;
+		-ms-border-radius-bottomright: 0 !important;
+		-webkit-border-bottom-right-radius: 0 !important;
+		-khtml-border-bottom-right-radius: 0 !important;
+	border-bottom-right-radius: 0 !important;
+
+		-o-border-radius-bottomleft: 0 !important;
+		-moz-border-radius-bottomleft: 0 !important;
+		-ms-border-radius-bottomleft: 0 !important;
+		-webkit-border-bottom-left-radius: 0 !important;
+		-khtml-border-bottom-left-radius: 0 !important;
+	border-bottom-left-radius: 0 !important; 
+}
+.ui-datepicker .ui-datepicker-title { 
+	margin: 0 2.3em; 
+	line-height: 1.8em; 
+	text-align: center; 
+
+	border: none !important;
+	border-radius: none !important;
+	border-top-left-radius: none !important;
+	border-top-right-radius: none !important;
+	border-bottom-left-radius: none !important;
+	border-bottom-right-radius: none !important;
+}
 .ui-datepicker .ui-datepicker-title select { font-size:1em; margin:1px 0; }
 .ui-datepicker select.ui-datepicker-month-year {width: 100%;}
 .ui-datepicker select.ui-datepicker-month, 
 .ui-datepicker select.ui-datepicker-year { width: 49%;}
-.ui-datepicker table {width: 100%; font-size: .9em; border-collapse: collapse; margin:0 0 .4em; }
-.ui-datepicker th { padding: .7em .3em; text-align: center; font-weight: bold; border: 0;  }
-.ui-datepicker td { border: 0; padding: 1px; }
-.ui-datepicker td span, .ui-datepicker td a { display: block; padding: .2em; text-align: right; text-decoration: none; }
+.ui-datepicker table {
+	width: 100%; 
+	font-size: .9em; 
+	border-collapse: collapse; 
+	margin:0; 
+}
+.ui-datepicker th { padding: .5em .3em; text-align: center; font-weight: bold; border-bottom: 1px solid rgba(117, 114, 115, 0.7);  }
+.ui-datepicker td { border: 0; padding: 0; }
+.ui-datepicker td span, .ui-datepicker td a { 
+	display: block; 
+	padding: .2em; 
+	text-align: center; 
+	text-decoration: none; 
+	border: 1px solid #dedede !important;
+}
 .ui-datepicker .ui-datepicker-buttonpane { background-image: none; margin: .7em 0 0 0; padding:0 .2em; border-left: 0; border-right: 0; border-bottom: 0; }
 .ui-datepicker .ui-datepicker-buttonpane button { float: right; margin: .5em .2em .4em; cursor: pointer; padding: .2em .6em .3em .6em; width:auto; overflow:visible; }
 .ui-datepicker .ui-datepicker-buttonpane button.ui-datepicker-current { float:left; }
 
+.highlight,
+.highlight a{
+	background-color: #A1CA4A !important;
+	color: #fff !important;
+}
+
+.ui-datepicker-today .ui-state-highlight{
+	border-color: rgb(96%, 52%, 0%) !important;
+}
+
+.ui-datepicker-current-day,
+.ui-datepicker-current-day a {
+	background-color: none !important;
+	background-color: rgb(96%, 52%, 0%) !important;
+	color: none !important;
+	color: #fff !important;
+}
+
 /* with multiple calendars */
 .ui-datepicker.ui-datepicker-multi { width:auto; }
 .ui-datepicker-multi .ui-datepicker-group { float:left; }
-.ui-datepicker-multi .ui-datepicker-group table { width:95%; margin:0 auto .4em; }
+.ui-datepicker-multi .ui-datepicker-group table { 
+	width:100%; 
+	margin:0; 
+	border-collapse: collapse;
+}
 .ui-datepicker-multi-2 .ui-datepicker-group { width:50%; }
 .ui-datepicker-multi-3 .ui-datepicker-group { width:33.3%; }
 .ui-datepicker-multi-4 .ui-datepicker-group { width:25%; }
@@ -350,7 +555,9 @@ body .ui-tooltip {  }
 /* states and images */
 .ui-icon { width: 16px; height: 16px; background-image: url(images/ui-icons_ffffff_256x240.png); }
 .ui-widget-content .ui-icon {background-image: url(images/ui-icons_ffffff_256x240.png); }
-.ui-widget-header .ui-icon {background-color: #D5D4D5; }
+.ui-widget-header .ui-icon { 
+	background-color: transparent !important; 
+}
 .ui-state-default .ui-icon { background-color: #D5D4D5; }
 .ui-state-hover .ui-icon, .ui-state-focus .ui-icon {background-color: #9E9C9D; }
 .ui-state-active .ui-icon {background-color:#757273;}
