--- a/css/style.css
+++ b/css/style.css
@@ -69,8 +69,6 @@ select{
 .button,
 button{
 	padding: 2px;
-	
-	
 	border-radius: 5px;
 	border: 1px solid #F7991C;
 	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
@@ -127,6 +125,26 @@ button:hover{
 	 	background-image: -ms-linear-gradient(top, #e40a0a, #9f0202);
 	 	background-image: -o-linear-gradient(top, #e40a0a, #9f0202);
 	 	background-image: linear-gradient(top, #e40a0a, #9f0202);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#e40a0a, endColorstr=#9f0202);
+}
+
+.button-simbolo{
+    border: none;
+    border-width: 0;
+    border-color: transparent;
+    box-shadow: 0 0 0 transparent;
+    background: none;
+    background-color: transparent;
+    color: #999;
+    font-size: 25px;
+    font-weight: bold;
+    margin-top: -10px;
+    cursor: pointer;
+}
+
+.button-simbolo:hover{
+    background: transparent;
+    color: #fff;
+    border: none !important;
 }
 
 /* main */
@@ -3316,6 +3334,10 @@ button:hover{
         -moz-transition: all 1s ease-in-out;
         -webkit-transition: all 1s ease-in-out;
     transition: all 1s ease-in-out;
+}
+
+.panel-side:hover  #permisos-mes .button-simbolo{
+    color: #fff;
 }
 
 .permisos li{
