--- a/css/style.css
+++ b/css/style.css
@@ -3354,6 +3354,29 @@ button:hover{
     padding: 5px 0;
 }
 
+.permisos .add{
+    padding: 5px 0;
+}
+
+.permisos .add span{
+    width: 20px;
+    font-size: 20px;
+    font-weight: bold;
+    color: #999;
+    text-align: center;
+    vertical-align: middle;
+    border-radius: 15px;
+    padding: 5px;
+    background-color: #333;
+    display: block;
+    margin: 0 auto;
+    cursor: pointer;
+}
+
+.permisos .add span:hover{
+
+}
+
 .permisos-nombre{
     font-weight: bold;
 }
