--- a/css/style.css
+++ b/css/style.css
@@ -3319,9 +3319,12 @@ button:hover{
 .permisos-wrapper{
     width: 100%;
     height: 100%;
+    margin: 0;
+    padding: 0;
     overflow-x: hidden;
     overflow-y: auto;
     display: block;
+    background-color: #f3efe6;
 }
 
 .permisos{
@@ -3362,9 +3365,45 @@ button:hover{
 }
 
 .permisos li{
-    background-color: #dedede;
+    background-color: #f3efe6;
     border-bottom: 2px solid #757273;
-    padding: 0 5px;
+    padding: 0;
+
+        -o-transition: all 2s ease-in-out;
+        -ms-transition: all 2s ease-in-out;
+        -moz-transition: all 2s ease-in-out;
+        -webkit-transition: all 2s ease-in-out;
+    transition: all 2s ease-in-out;
+}
+
+.permisos li:hover{
+    border-color: #5687d9;
+
+        -o-transition: all 1s ease-in-out;
+        -ms-transition: all 1s ease-in-out;
+        -moz-transition: all 1s ease-in-out;
+        -webkit-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
+}
+
+.permisos li:hover .permisos-nombre{
+    color: #fff;
+    background-color: #5687d9;
+        -o-transition: all 1s ease-in-out;
+        -ms-transition: all 1s ease-in-out;
+        -moz-transition: all 1s ease-in-out;
+        -webkit-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
+}
+
+.permisos li:hover .permisos-nombre .button-simbolo{
+    color: #fff;
+        -o-transition: all 1s ease-in-out;
+        -ms-transition: all 1s ease-in-out;
+        -moz-transition: all 1s ease-in-out;
+        -webkit-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
+    text-shadow: 0px 0px 0px transparent;
 }
 
 .permisos li span{
@@ -3372,7 +3411,7 @@ button:hover{
     width: 100%;
     text-align: left;
     border-bottom: 1px solid #fff;
-    padding: 5px 0;
+    padding: 5px 5px;
 }
 
 .permisos .add{
@@ -3411,6 +3450,23 @@ button:hover{
 
 .permisos-nombre{
     font-weight: bold;
+        -o-transition: all 2s ease-in-out;
+        -ms-transition: all 2s ease-in-out;
+        -moz-transition: all 2s ease-in-out;
+        -webkit-transition: all 2s ease-in-out;
+    transition: all 2s ease-in-out;
+}
+
+.permisos-nombre .button-simbolo{
+    font-size: 16px !important;
+    margin-top: -5px;
+    color: #999999;
+
+        -o-transition: all 2s ease-in-out;
+        -ms-transition: all 2s ease-in-out;
+        -moz-transition: all 2s ease-in-out;
+        -webkit-transition: all 2s ease-in-out;
+    transition: all 2s ease-in-out;
 }
 
 .permisos .tags{
@@ -3424,6 +3480,30 @@ button:hover{
     display: inline-block;
     width: auto;
     border: 0px;
+}
+
+.permisos-archivos a{
+    display: inline-block;
+    width: auto;
+    max-width: 30%;
+    margin-left: 1%;
+    margin-right: 1%;
+    color: #000;
+    text-align: center;
+}
+
+.permisos-archivos a p{
+    color: #000;
+    font-size: 14px;
+}
+
+.permisos-archivos a img{
+    max-height: 70px;
+}
+
+.permisos-archivos a:hover p{
+    color: #5687d9;
+    font-size: 14px;
 }
 
 /**
