--- a/css/style.css
+++ b/css/style.css
@@ -3033,8 +3033,9 @@ button:hover{
 
 .panel-edicion{
     background: #F3EFE6;
-    position: absolute;
-    width: 69.5%;
+    position: relative;
+    z-index: 100;
+    width: 100%;
     height: 0;
     margin-top: 100%;
     overflow-x: hidden;
@@ -3054,6 +3055,7 @@ button:hover{
 
 .panel-edicion form{
     display: none;
+    margin-bottom: 15%;
 }
 
 .panel-edicion .datos-botones{
