--- a/js/select2/select2.css
+++ b/js/select2/select2.css
@@ -268,7 +268,7 @@ Version: @@ver@@ Timestamp: @@timestamp@@
 
 .select2-container-active .select2-choice,
 .select2-container-active .select2-choices {
-    border: 1px solid #5897fb;
+    border: 1px solid #a0ca48;
     outline: none;
 
     -webkit-box-shadow: 0 0 5px rgba(0,0,0,.3);
@@ -326,8 +326,8 @@ Version: @@ver@@ Timestamp: @@timestamp@@
 /* results */
 .select2-results {
     max-height: 200px;
-    padding: 0 0 0 4px;
-    margin: 4px 4px 4px 0;
+    padding: 0;
+    margin: 0 0 4px 0;
     position: relative;
     overflow-x: hidden;
     overflow-y: auto;
@@ -373,7 +373,7 @@ Version: @@ver@@ Timestamp: @@timestamp@@
 }
 
 .select2-results .select2-highlighted {
-    background: #3875d7;
+    background: #a0ca48;
     color: #fff;
 }
 
@@ -478,7 +478,7 @@ disabled look for disabled choices in the results dropdown
 }
 
 .select2-container-multi.select2-container-active .select2-choices {
-    border: 1px solid #5897fb;
+    border: 1px solid #a0ca48;
     outline: none;
 
     -webkit-box-shadow: 0 0 5px rgba(0,0,0,.3);
@@ -539,7 +539,7 @@ disabled look for disabled choices in the results dropdown
           -ms-user-select: none;
               user-select: none;
 
-    background-color: #F3EFE6;
+    background-color: #f3f0e7;
 
     -o-transition: all 6s ease-in-out;
     -ms-transition: all 6s ease-in-out;
@@ -549,8 +549,8 @@ disabled look for disabled choices in the results dropdown
 }
 
 .select2-container-multi .select2-choices .select2-search-choice:hover{
-    background-color: #5687d9;
-    border: 1px solid #aaa;
+    background-color: #a0ca48;
+    border: 1px solid #f7991f;
     color: #fff;
 
         -o-transition: all 1s ease-in-out;
