--- a/css/style.css
+++ b/css/style.css
@@ -3038,12 +3038,7 @@ button:hover{
     position: relative;
 }
 
-#permisos .titulo{
-    text-align: center;
-    color: #fff;
-    background-color: #8f8f8f;
-}
-
+/* PERMISOS DE UN MES */
 #permisos-mes{
     display: none;
     width: 0px;
@@ -3057,8 +3052,10 @@ button:hover{
 #permisos-mes .titulo{
     text-align: center;
     color: #fff;
-    background-color: #8f8f8f;
+    background-color: #7c4f31;
 }
+
+/* PERMISOS ESTILOS GENERALES */
 
 .permisos-wrapper{
     width: 100%;
@@ -3069,6 +3066,138 @@ button:hover{
     overflow-y: auto;
     display: block;
     background-color: #f3efe6;
+}
+
+.permisos-wrapper ul{
+    margin-bottom: 26px;
+}
+
+/*para marcar un permiso expirado expirado*/
+.titulo-expirado{
+    background-color: red !important;
+}
+
+.permisos{
+    width: 100%;
+    list-style: none;
+}
+
+.permisos .titulo-mes{
+    text-align: center;
+    color: #fff;
+    background-color: #999;
+}
+
+.permisos .titulo{
+    text-align: center;
+    color: #fff;
+    background-color: #7c4f31;
+}
+
+.permisos td:first-child{
+    max-width: 250px;
+}
+
+.permisos td{
+    text-align: left;
+    padding: 5px;
+    border-bottom: 1px solid #aaa;
+    vertical-align: middle;
+}
+
+.permiso-archivos{
+    text-align: center !important;
+}
+
+.permiso-archivos a{
+    display: inline-block;
+    max-width: 30%;
+    margin-left: 1%;
+    margin-right: 1%;
+    text-align: center;
+}
+
+.permisos .no-data{
+    padding-top: 10px;
+    padding-bottom: 10px;
+    cursor: pointer;
+
+        -o-transition: all 3s ease-in-out;
+        -ms-transition: all 3s ease-in-out;
+        -moz-transition: all 3s ease-in-out;
+        -webkit-transition: all 3s ease-in-out;
+    transition: all 3s ease-in-out;
+}
+
+.permisos .no-data:hover{
+    background-color: #7c4f31;
+    color: #fff;
+
+        -o-transition: all 1s ease-in-out;
+        -ms-transition: all 1s ease-in-out;
+        -moz-transition: all 1s ease-in-out;
+        -webkit-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
+}
+
+
+/* PANEL DE EDICION */
+#panel-edicion{
+    display: none;
+    opacity: 0;
+    width: 100%;
+    height: 100px;
+    position: absolute;
+    bottom: 0;
+    background-color: #f3f0e7;
+}
+
+#panel-edicion .titulo{
+    background-color: #fff;
+}
+
+#panel-edicion form{
+    width: 100%;
+}
+
+#panel-edicion form table{
+    width: 95%;
+    margin: 0 auto;
+    border-spacing: 0px 10px;
+    border-collapse: separate;
+    font-size: 15px;
+}
+
+#panel-edicion form table td{
+    background-color: #fff;
+    text-align: left;
+    padding: 5px;
+}
+
+#panel-edicion form table tr td:first-child{
+    width: 1px;
+    white-space: nowrap;
+    border-left: 1px solid #aaa;
+    border-top: 1px solid #aaa;
+    border-bottom: 1px solid #aaa;
+}
+
+#panel-edicion form table tr td:last-child{
+    border-right: 1px solid #aaa;
+    border-top: 1px solid #aaa;
+    border-bottom: 1px solid #aaa;
+}
+
+#panel-edicion form table tr td:last-child input{
+    width: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+#panel-edicion input{
+    font-size: 15px;
+    border: 0 solid transparent;
+    outline: none;
 }
 
 /******************************************************************/
@@ -3562,35 +3691,12 @@ button:hover{
 }
 
 .mes-actived .titulo{
-    background-color: #8f8f8f;  
+    background-color: #7c4f31;
     color: #fff;
 }
 
 .mes-actived{
     margin-top: -15px;
-}
-
-.mes-actived .week-headers td{
-    color: #fff;
-
-    -o-transition: all 1s ease-in-out;
-    -ms-transition: all 1s ease-in-out;
-    -moz-transition: all 1s ease-in-out;
-    -webkit-transition: all 1s ease-in-out;
-    transition: all 1s ease-in-out;
-}
-
-.week-headers td span{
-    display: inline-block;
-    padding: 0;
-    margin: 0;
-    opacity: 1;
-
-        -o-transition: all 1s ease-in-out;
-        -ms-transition: all 1s ease-in-out;
-        -moz-transition: all 1s ease-in-out;
-        -webkit-transition: all 1s ease-in-out;
-    transition: all 1s ease-in-out;
 }
 
 .mes .banderin{
@@ -3625,7 +3731,7 @@ button:hover{
     float: left;
     font-size: 50px;
     font-weight: bold;
-    color: #757273;
+    color: #7c4f31;
     cursor: pointer;
 
         -o-transition: all 3s ease-in-out;
