--- a/js/select2/select2.css
+++ b/js/select2/select2.css
@@ -5,6 +5,7 @@ Version: @@ver@@ Timestamp: @@timestamp@@
     margin: 0;
     position: relative;
     display: inline-block;
+    width: 100%;
     /* inline-block for ie7 */
     zoom: 1;
     *display: inline;
@@ -35,7 +36,7 @@ Version: @@ver@@ Timestamp: @@timestamp@@
     overflow: hidden;
     position: relative;
 
-    border: 1px solid #aaa;
+    /*border: 1px solid #aaa;*/
     white-space: nowrap;
     line-height: 26px;
     color: #444;
@@ -56,14 +57,14 @@ Version: @@ver@@ Timestamp: @@timestamp@@
           -ms-user-select: none;
               user-select: none;
 
-    background-color: #fff;
+    /*background-color: #fff;
     background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, #eeeeee), color-stop(0.5, white));
     background-image: -webkit-linear-gradient(center bottom, #eeeeee 0%, white 50%);
     background-image: -moz-linear-gradient(center bottom, #eeeeee 0%, white 50%);
     background-image: -o-linear-gradient(bottom, #eeeeee 0%, #ffffff 50%);
     background-image: -ms-linear-gradient(top, #ffffff 0%, #eeeeee 50%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = '#ffffff', endColorstr = '#eeeeee', GradientType = 0);
-    background-image: linear-gradient(top, #ffffff 0%, #eeeeee 50%);
+    background-image: linear-gradient(top, #ffffff 0%, #eeeeee 50%);*/
 }
 
 .select2-container.select2-drop-above .select2-choice {
@@ -183,7 +184,7 @@ Version: @@ver@@ Timestamp: @@timestamp@@
     right: 0;
     top: 0;
 
-    border-left: 1px solid #aaa;
+    /*border-left: 1px solid #aaa;*/
     -webkit-border-radius: 0 4px 4px 0;
        -moz-border-radius: 0 4px 4px 0;
             border-radius: 0 4px 4px 0;
@@ -192,14 +193,14 @@ Version: @@ver@@ Timestamp: @@timestamp@@
        -moz-background-clip: padding;
             background-clip: padding-box;
 
-    background: #ccc;
+    /*background: #ccc;
     background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, #ccc), color-stop(0.6, #eee));
     background-image: -webkit-linear-gradient(center bottom, #ccc 0%, #eee 60%);
     background-image: -moz-linear-gradient(center bottom, #ccc 0%, #eee 60%);
     background-image: -o-linear-gradient(bottom, #ccc 0%, #eee 60%);
     background-image: -ms-linear-gradient(top, #cccccc 0%, #eeeeee 60%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = '#eeeeee', endColorstr = '#cccccc', GradientType = 0);
-    background-image: linear-gradient(top, #cccccc 0%, #eeeeee 60%);
+    background-image: linear-gradient(top, #cccccc 0%, #eeeeee 60%);*/
 }
 
 .select2-container .select2-choice div b {
@@ -227,29 +228,28 @@ Version: @@ver@@ Timestamp: @@timestamp@@
     width: 100%;
     height: auto !important;
     min-height: 26px;
-    padding: 4px 20px 4px 5px;
-    margin: 0;
+    padding: 4px 20px 4px 7px;
+    margin: 0 0 5px 0;
 
     outline: 0;
-    font-family: sans-serif;
-    font-size: 1em;
+    font-size: 14px;
 
     border: 1px solid #aaa;
-    -webkit-border-radius: 0;
-       -moz-border-radius: 0;
-            border-radius: 0;
+    -webkit-border-radius: 12px;
+       -moz-border-radius: 12px;
+            border-radius: 12px;
 
     -webkit-box-shadow: none;
        -moz-box-shadow: none;
             box-shadow: none;
 
-    background: #fff url('select2.png') no-repeat 100% -22px;
-    background: url('select2.png') no-repeat 100% -22px, -webkit-gradient(linear, left bottom, left top, color-stop(0.85, white), color-stop(0.99, #eeeeee));
+    background: url('select2.png') no-repeat 100% -22px;
+    /*background: url('select2.png') no-repeat 100% -22px, -webkit-gradient(linear, left bottom, left top, color-stop(0.85, white), color-stop(0.99, #eeeeee));
     background: url('select2.png') no-repeat 100% -22px, -webkit-linear-gradient(center bottom, white 85%, #eeeeee 99%);
     background: url('select2.png') no-repeat 100% -22px, -moz-linear-gradient(center bottom, white 85%, #eeeeee 99%);
     background: url('select2.png') no-repeat 100% -22px, -o-linear-gradient(bottom, white 85%, #eeeeee 99%);
     background: url('select2.png') no-repeat 100% -22px, -ms-linear-gradient(top, #ffffff 85%, #eeeeee 99%);
-    background: url('select2.png') no-repeat 100% -22px, linear-gradient(top, #ffffff 85%, #eeeeee 99%);
+    background: url('select2.png') no-repeat 100% -22px, linear-gradient(top, #ffffff 85%, #eeeeee 99%);*/
 }
 
 .select2-drop.select2-drop-above .select2-search input {
@@ -268,12 +268,8 @@ Version: @@ver@@ Timestamp: @@timestamp@@
 
 .select2-container-active .select2-choice,
 .select2-container-active .select2-choices {
-    border: 1px solid #a0ca48;
+    width: 100%;
     outline: none;
-
-    -webkit-box-shadow: 0 0 5px rgba(0,0,0,.3);
-       -moz-box-shadow: 0 0 5px rgba(0,0,0,.3);
-            box-shadow: 0 0 5px rgba(0,0,0,.3);
 }
 
 .select2-dropdown-open .select2-choice {
@@ -290,14 +286,14 @@ Version: @@ver@@ Timestamp: @@timestamp@@
         -moz-border-radius-bottomright: 0;
             border-bottom-right-radius: 0;
 
-    background-color: #eee;
+    /*background-color: #eee;
     background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, white), color-stop(0.5, #eeeeee));
     background-image: -webkit-linear-gradient(center bottom, white 0%, #eeeeee 50%);
     background-image: -moz-linear-gradient(center bottom, white 0%, #eeeeee 50%);
     background-image: -o-linear-gradient(bottom, white 0%, #eeeeee 50%);
     background-image: -ms-linear-gradient(top, #ffffff 0%,#eeeeee 50%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', endColorstr='#ffffff',GradientType=0 );
-    background-image: linear-gradient(top, #ffffff 0%,#eeeeee 50%);
+    background-image: linear-gradient(top, #ffffff 0%,#eeeeee 50%);*/
 }
 
 .select2-dropdown-open.select2-drop-above .select2-choice,
@@ -450,23 +446,17 @@ disabled look for disabled choices in the results dropdown
 /* multiselect */
 
 .select2-container-multi .select2-choices {
+    width: 100%;
     height: auto !important;
     height: 1%;
     margin: 0;
     padding: 0;
     position: relative;
 
-    border: 1px solid #aaa;
     cursor: text;
     overflow: hidden;
 
     background-color: #fff;
-    background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, color-stop(1%, #eeeeee), color-stop(15%, #ffffff));
-    background-image: -webkit-linear-gradient(top, #eeeeee 1%, #ffffff 15%);
-    background-image: -moz-linear-gradient(top, #eeeeee 1%, #ffffff 15%);
-    background-image: -o-linear-gradient(top, #eeeeee 1%, #ffffff 15%);
-    background-image: -ms-linear-gradient(top, #eeeeee 1%, #ffffff 15%);
-    background-image: linear-gradient(top, #eeeeee 1%, #ffffff 15%);
 }
 
 .select2-locked {
@@ -478,12 +468,7 @@ disabled look for disabled choices in the results dropdown
 }
 
 .select2-container-multi.select2-container-active .select2-choices {
-    border: 1px solid #a0ca48;
     outline: none;
-
-    -webkit-box-shadow: 0 0 5px rgba(0,0,0,.3);
-       -moz-box-shadow: 0 0 5px rgba(0,0,0,.3);
-            box-shadow: 0 0 5px rgba(0,0,0,.3);
 }
 .select2-container-multi .select2-choices li {
     float: left;
@@ -520,7 +505,7 @@ disabled look for disabled choices in the results dropdown
 
 .select2-container-multi .select2-choices .select2-search-choice {
     padding: 5px 5px 5px 18px;
-    margin: 2px 0 3px 5px;
+    margin: 0px 0 3px 5px;
     position: relative;
 
     line-height: 13px;
