--- a/css/style.css
+++ b/css/style.css
@@ -3140,7 +3140,7 @@ button:hover{
 #permisos-mes .titulo{
     text-align: center;
     color: #fff;
-    background-color: #7c4f31;
+    background-color: #747273;
 }
 
 /* PERMISOS ESTILOS GENERALES */
@@ -3153,7 +3153,7 @@ button:hover{
     overflow-x: hidden;
     overflow-y: auto;
     display: block;
-    background-color: #f3efe6;
+    background-color: #edeaea;
 }
 
 .permisos-wrapper ul:first-child{
@@ -3162,7 +3162,7 @@ button:hover{
 
 /*para marcar un permiso expirado expirado*/
 .titulo-expirado{
-    background-color: red !important;
+    background-color: #ff6868 !important;
 }
 
 .permisos{
@@ -3179,7 +3179,7 @@ button:hover{
 .permisos .titulo{
     text-align: center;
     color: #fff;
-    background-color: #7c4f31;
+    background-color: #747273;
 }
 
 /* tabla de los datos de un permiso */
@@ -3235,8 +3235,8 @@ button:hover{
 }
 
 .permiso-archivos ul li div span{
-    border: 1px solid #F3EFE6;
-    background-color: #F3EFE6;
+    border: 1px solid #edeaea;
+    background-color: #edeaea;
     color: #aaa;
     border-radius: 5px;
     font-size: 16px;
@@ -3307,7 +3307,7 @@ button:hover{
 }
 
 .permisos .no-data:hover{
-    background-color: #7c4f31;
+    background-color: #747273;
     color: #fff;
 
         -o-transition: all 1s ease-in-out;
@@ -3452,7 +3452,7 @@ button:hover{
 }
 
 .file div span{
-    background-color: #F3EFE6;
+    background-color: #edeaea;
     border: 1px solid #DEDEDE;
     border-radius: 5px 5px 5px 5px;
     color: #000000;
@@ -3556,7 +3556,7 @@ button:hover{
 }
 
 .mes-actived .titulo{
-    background-color: #7c4f31;
+    background-color: #747273;
     color: #fff;
 }
 
@@ -3596,7 +3596,7 @@ button:hover{
     float: left;
     font-size: 50px;
     font-weight: bold;
-    color: #7c4f31;
+    color: #747273;
     cursor: pointer;
 
         -o-transition: all 3s ease-in-out;
