Fix padding en titulo de todos los permisos

--- a/css/style.css
+++ b/css/style.css
@@ -3103,6 +3103,10 @@ button:hover{
     position: relative;
 }
 
+#permisos #titulo-todos-permisos{
+    padding: 0 !important;
+}
+
 #permisos .titulo table{
     width: 100%;
     border: none;
