--- a/Admin/css/jquery-ui-1.9.0.custom.css
+++ b/Admin/css/jquery-ui-1.9.0.custom.css
@@ -272,12 +272,18 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra pad
 	border-bottom-right-radius: none !important;
 }
 .ui-datepicker .ui-datepicker-title select { font-size:1em; margin:1px 0; }
-.ui-datepicker select.ui-datepicker-month-year {width: 100%;}
+.ui-datepicker select.ui-datepicker-month-year {
+    width: 100%;
+}
 .ui-datepicker select.ui-datepicker-month, 
-.ui-datepicker select.ui-datepicker-year { width: 49%;}
+.ui-datepicker select.ui-datepicker-year {
+    width: 100%%;
+    display: block;
+}
+
 .ui-datepicker table {
-	width: 100%; 
-	font-size: .9em; 
+	width: 100%;
+	font-size: .9em;
 	border-collapse: collapse; 
 	margin:0; 
 }
